--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "orientation": "portrait",
   "scope": "/",
   "short_name": "subaru-test",
-  "start_url": "/",
+  "start_url": "https://subaru-test-pwa.netlify.app/",
   "theme_color": "#000000",
   "categories": [],
   "screenshots": [],
